Use Contract-First